# interactive-cg

./: .gitignore  Makefile  flake.nix
RayTracer/: .gitignore  Makefile  RayTracer.cpp
RayTracer/SceneObjects/: Box.cpp  Cone.cpp  Cylinder.cpp  Sphere.cpp  Square.cpp  trimesh.cpp
RayTracer/reports/: main.typ
RayTracer/scene/: light.cpp  material.cpp
RayTracer/scenes/: test.ray
RayTracer/ui/: ModelerCamera.cpp  TraceGLWindow.h  debuggingView.cpp  glObjects.cpp
RayTracer/vecmath/: mat.h  vec.h
impressionist/: .gitignore  CMakeLists.txt  README.md  fltk_hello.cpp
impressionist/include/: FltDesignUI.h  bitmap.h  circleBrush.h  impBrush.h  impressionist.h  impressionistDoc.h  impressionistUI.h  lineBrush.h  originalView.h  paintView.h  pointBrush.h  scatteredCircleBrush.h  scatteredPointBrush.h  triangleBrush.h  vividPointBrush.h  vividScatteredLineBrush.h
impressionist/report/: main.typ  quiz1.typ
impressionist/report/fig/: .gitignore
impressionist/src/: FltDesignUI.cpp  bitmap.cpp  circleBrush.cpp  impBrush.cpp  impressionist.cpp  impressionistDoc.cpp  impressionistUI.cpp  lineBrush.cpp  originalView.cpp  paintView.cpp  pointBrush.cpp  scatteredCircleBrush.cpp  scatteredPointBrush.cpp  triangleBrush.cpp  vividPointBrush.cpp  vividScatteredLineBrush.cpp
modeler/: .gitmodules  CMakeLists.txt  README.md
modeler/include/: CImg.h  controller.h  model.h  modelerdraw.h  particleSystem.h
modeler/report/: main.typ
modeler/src/: main.cpp  modelerapp.cpp  modelerdraw.cpp  modelerui.cpp  modelerview.cpp  particleSystem.cpp
src/: main.cpp
